--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <name>elasticsearch-query-toolkit</name>
+    <name>sql2dsl-toolkit</name>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.es</groupId>
-    <artifactId>elasticsearch-query-toolkit</artifactId>
+    <artifactId>sql2dsl-toolkit</artifactId>
     <version>${elasticsearch.version}</version>
-    <packaging>jar</packaging>
-    <description>elasticsearch-query-toolkit</description>
-    <inceptionYear>2017</inceptionYear>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -19,7 +17,7 @@
     </licenses>
 
     <properties>
-        <elasticsearch.version>5.2.0</elasticsearch.version>
+        <elasticsearch.version>5.4.0</elasticsearch.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <skip.unit.tests>false</skip.unit.tests>
     </properties>
@@ -113,51 +111,24 @@
         </dependency>
     </dependencies>
 
+    <!-- 打包插件，生成不含dependencies的jar和包含dependencies的jar -->
+    <!-- 使用 mvn install -DskipTests 打包 -->
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <encoding>utf-8</encoding>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/Test*.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4.1</version>
                 <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
+                    <skipTests>true</skipTests>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <encoding>utf-8</encoding>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
